--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,15 +47,16 @@
         
         <form ng-controller="login">
 	        <ul class="nav navbar-nav">
-	          <li><a href="#today"><strong>today</strong></a></li>
+	          <li><a href="#today"><strong>upcoming</strong></a></li>
 	          <!--<li><a href="#week"><strong>this week</strong></a></li>-->
-	          <li><a href="#recommended" ng-show="authenticated"><strong>may be interesting for me</strong></a></li>
-	          <li><a href="#liked" ng-show="authenticated"><strong>events i liked</strong></a></li>
+	          <!--  <li><a href="#recommended" ng-show="authenticated"><strong>may be interesting for me</strong></a></li>
+	          <li><a href="#liked" ng-show="authenticated"><strong>events i liked</strong></a></li>-->
 	          <li><a href="#venues"><strong>venues</strong></a></li>
 	          <li><a href="#addvenue" ng-show="authenticated"><strong>add venue</strong></a></li>
 	          <li><a href="#addevent" ng-show="authenticated"><strong>add event</strong></a></li>
 	          <li><a href="#feedback"><strong>leave your feedback</strong></a></li>
 	          <li><a href="#login" ng-show="!authenticated"><strong>login</strong></a></li>
+	          <li><ng-show="authenticated"><strong>{{user}}</strong></a></li>
 	          <li><a href="" ng-click="logout()" ng-show="authenticated"><strong>logout</strong></a></li>
 	          
 	        </ul>
