upcoming events front end

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -49,8 +49,8 @@
 	        <ul class="nav navbar-nav">
 	          <li><a href="#today"><strong>upcoming</strong></a></li>
 	          <!--<li><a href="#week"><strong>this week</strong></a></li>-->
-	          <!--  <li><a href="#recommended" ng-show="authenticated"><strong>may be interesting for me</strong></a></li>
-	          <li><a href="#liked" ng-show="authenticated"><strong>events i liked</strong></a></li>-->
+	          <!--  <li><a href="#recommended" ng-show="authenticated"><strong>may be interesting for me</strong></a></li>-->
+	          <li><a href="#myUpcomingEvents" ng-show="authenticated"><strong>my upcoming events</strong></a></li>
 	          <li><a href="#venues"><strong>venues</strong></a></li>
 	          <li><a href="#addvenue" ng-show="authenticated"><strong>add venue</strong></a></li>
 	          <li><a href="#addevent" ng-show="authenticated"><strong>add event</strong></a></li>
