working on update event

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -51,6 +51,7 @@
 	          <!--<li><a href="#week"><strong>this week</strong></a></li>-->
 	          <!--  <li><a href="#recommended" ng-show="authenticated"><strong>may be interesting for me</strong></a></li>-->
 	          <li><a href="#myUpcomingEvents" ng-show="authenticated"><strong>my upcoming events</strong></a></li>
+	          <li><a href="#myCreatedEvents" ng-show="authenticated"><strong>my created events</strong></a></li>
 	          <li><a href="#venues"><strong>venues</strong></a></li>
 	          <li><a href="#addvenue" ng-show="authenticated"><strong>add venue</strong></a></li>
 	          <li><a href="#addevent" ng-show="authenticated"><strong>add event</strong></a></li>
